WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135633
setCustomSwipeViews inside didChangeBackForwardList client callback is ignored
https://bugs.webkit.org/show_bug.cgi?id=135633
Summary
setCustomSwipeViews inside didChangeBackForwardList client callback is ignored
Tim Horton
Reported
2014-08-05 19:21:06 PDT
WebKit clears the set of custom swipe views at the end of WebPageProxy::didChangeBackForwardList, *after* calling into the client. This means that if the client wants to setCustomSwipeViews in didChangeBackForwardList, it won't be respected. Since there's only one client of this SPI, let's just stop clearing the list of custom swipe views in WebKit and leave that totally up to the client.
Attachments
patch
(5.24 KB, patch)
2014-08-05 19:23 PDT
,
Tim Horton
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-08-05 19:21:15 PDT
<
rdar://problem/17926507
>
Tim Horton
Comment 2
2014-08-05 19:23:33 PDT
Created
attachment 236072
[details]
patch
Tim Horton
Comment 3
2014-08-07 16:30:05 PDT
http://trac.webkit.org/changeset/172307
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug