setCustomSwipeViews inside didChangeBackForwardList client callback is ignored https://bugs.webkit.org/show_bug.cgi?id=135633 <rdar://problem/17926507>

Reviewed by Sam Weinig.

* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didChangeBackForwardList):
* UIProcess/ios/PageClientImplIOS.h:
* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::clearCustomSwipeViews): Deleted.
* UIProcess/mac/PageClientImpl.h:
* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::clearCustomSwipeViews): Deleted.
WebKit clears the set of custom swipe views at the end of WebPageProxy::didChangeBackForwardList,
*after* calling into the client. This means that if the client wants to setCustomSwipeViews in
didChangeBackForwardList, it won't be respected.

Since there's only one client of this SPI, let's just stop clearing the list of custom swipe
views in WebKit and leave that totally up to the client.


Canonical link: https://commits.webkit.org/153610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172307 268f45cc-cd09-0410-ab3c-d52691b4dbfc